--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,2 +1,25 @@
-<h1>Articles#index</h1>
+<p>Articles</p>
 <p>Find me in app/views/articles/index.html.erb</p>
+
+<%# <a href="/articles/create">Create Article</a> %>
+<a href="<%= new_article_path() %>">Create Article</a>
+
+<ul>
+  <% @articles.each do |article| %>
+    <li>
+      <%# <a href="/articles/<%=article.id %>
+
+      <%# Other way %>
+      <a href="<%= article_path(article)%>">
+        <span>
+          <%= article.title %>
+          -
+          <%= article.author %>
+        </span>
+      </a>
+
+      <%# Other way %>
+      <%#= link_to article.title, article %>
+    </li>
+  <% end %>
+</ul>
