--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,23 +3,28 @@
 
 <%# <a href="/articles/create">Create Article</a> %>
 <a href="<%= new_article_path() %>">Create Article</a>
+<br/>
+<br/>
 
+Our blog has <%= Article.public_count %> articles and counting!
 <ul>
   <% @articles.each do |article| %>
-    <li>
-      <%# <a href="/articles/<%=article.id %>
+    <% unless article.archived? %>
+      <li>
+        <%# <a href="/articles/<%=article.id %>
 
-      <%# Other way %>
-      <a href="<%= article_path(article)%>">
-        <span>
-          <%= article.title %>
-          -
-          <%= article.author %>
-        </span>
-      </a>
+        <%# Other way %>
+        <a href="<%= article_path(article)%>">
+          <span>
+            <%= article.title %>
+            -
+            <%= article.author %>
+          </span>
+        </a>
 
-      <%# Other way %>
-      <%#= link_to article.title, article %>
-    </li>
+        <%# Other way %>
+        <%#= link_to article.title, article %>
+      </li>
+    <% end %>
   <% end %>
 </ul>
